added  contact details and fixed active lin color

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,34 +1,30 @@
-<!-- ============================================ -->
-<!--                    Hero                      -->
-<!-- ============================================ -->
-
+<!-- ============================================ --><!--                    Hero                      --><!-- ============================================ -->
 <section id="hero-1785">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">BadDog</span>
-            <h1 class="cs-title">You Can Boost Your Strength</h1>
-            <p class="cs-text">
-                Develop confidence, composure under pressure and the discipline needed to be a champ. This is the club you’ve been looking for.
-            </p>
-            <div class="cs-button-group">
-                <a href="" class="cs-button-solid cs-button1">Read More</a>
-            </div>
+            <h1 class="cs-title">BadDog</h1>
         </div>
     </div>
 
     <!-- Background Image -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/Images/Hero.jpg">
-        <source media="(min-width: 601px)" srcset="/Images/Hero.jpg">
-        <img loading="lazy" decoding="async" src="/Images/Hero.jpg" alt="field" width="1920" height="1200" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/Images/Hero.jpg" />
+        <source media="(min-width: 601px)" srcset="/Images/Hero.jpg" />
+        <img loading="lazy" decoding="async" src="/Images/Hero.jpg" alt="field" width="1920" height="1200" aria-hidden="true" />
     </picture>
 
-    <img class="cs-graphic" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/white-splatter2.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+    <img class="cs-graphic" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/white-splatter2.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" />
     <!--This is a dark version. Download the image and change the fill color to match the color of the section background below it-->
-    <img class="cs-graphic cs-graphic-dark" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/dark-mode-splatter2.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+    <img
+        class="cs-graphic cs-graphic-dark"
+        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/dark-mode-splatter2.svg"
+        alt="graphic"
+        height="161"
+        width="1920"
+        loading="lazy"
+        decoding="async"
+    />
 </section>
-
-
 
 <style>
     /*-- -------------------------- -->
@@ -97,7 +93,7 @@
             z-index: 1;
         }
         #hero-1785 .cs-button-solid:before {
-            content: "";
+            content: '';
             width: 0%;
             height: 100%;
             background: #000;
@@ -137,7 +133,7 @@
         }
         #hero-1785 .cs-background:before {
             /* Overlay */
-            content: "";
+            content: '';
             width: 100%;
             height: 100%;
             background: #000;
@@ -167,4 +163,22 @@
         }
     }
 
+    .cs-title,
+    .cs-text {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        color: white !important;
+        font-size: large;
+        font-style: italic;
+        margin: 0%;
+    }
+
+    .cs-title {
+        margin-bottom: 15px;
+    }
+
+    .cs-button1 {
+        margin-top: 15px;
+    }
 </style>
