--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,48 @@
-<!-- ============================================ -->
-<!--                   Footer                     -->
-<!-- ============================================ -->
-
+<!-- ============================================ --><!--                   Footer                     --><!-- ============================================ -->
 <footer id="cs-footer-274">
     <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
             <a aria-label="go back to home" class="cs-logo" href="">
                 <!-- Remove the light class if you don't need the dark logo -->
-                <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/Images/Icon.png" alt="logo" width="50" height="32">
+                <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/Images/Icon.png" alt="logo" width="50" height="32" />
             </a>
             <div class="cs-social">
                 <a class="cs-social-link" aria-label="visit google profile" href="">
-                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg" alt="google" width="11" height="11">
+                    <img
+                        class="cs-social-img"
+                        aria-hidden="true"
+                        loading="lazy"
+                        decoding="async"
+                        src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg"
+                        alt="google"
+                        width="11"
+                        height="11"
+                    />
                 </a>
                 <a class="cs-social-link" aria-label="visit facebook profile" href="">
-                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg" alt="facebook" width="6" height="11">
+                    <img
+                        class="cs-social-img"
+                        aria-hidden="true"
+                        loading="lazy"
+                        decoding="async"
+                        src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg"
+                        alt="facebook"
+                        width="6"
+                        height="11"
+                    />
                 </a>
                 <a class="cs-social-link" aria-label="visit instagram profile" href="">
-                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg" alt="instagram" width="11" height="11">
+                    <img
+                        class="cs-social-img"
+                        aria-hidden="true"
+                        loading="lazy"
+                        decoding="async"
+                        src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg"
+                        alt="instagram"
+                        width="11"
+                        height="11"
+                    />
                 </a>
             </div>
         </div>
@@ -28,10 +52,10 @@
                 <span class="cs-header">Contact</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="tel:123-456 7890">(123) 456 7890</a>
+                <a class="cs-nav-link" href="tel:36 20 558 2891">+36 20 558 2891</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="mailto:info@codestitch.com">info@codestitch.com</a>
+                <a class="cs-nav-link" href="mailto:baddog.sf@gmail.com">baddog.sf@gmail.com</a>
             </li>
         </ul>
         <ul class="cs-nav">
@@ -39,7 +63,7 @@
                 <span class="cs-header">Address</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">123 Avenue Street<br> Oak Harbor, WA 98101</a>
+                <a class="cs-nav-link" href="">Budai Nagy Antal Út 25<br />Dunaujvaros 2400 Hungary</a>
             </li>
         </ul>
         <!-- Contact Info -->
@@ -47,18 +71,13 @@
             <li class="cs-nav-li">
                 <span class="cs-header">Opening Hours</span>
             </li>
-            <li class="cs-nav-li">
-                Tuesday, Thursday, Friday: 9am-6pm
-            </li>
-            <li class="cs-nav-li">
-                ​(closed for lunch 12pm-2pm)
-            </li>
+            <li class="cs-nav-li">tbh</li>
+            <li class="cs-nav-li">​(closed for lunch 12pm-2pm)</li>
         </ul>
     </div>
 </footer>
 
-
-
+<!-- ============================================ --><!--                   Footer CSS                 --><!-- ============================================ -->
 <style>
     /*-- -------------------------- -->
     <---          Footer            -->
@@ -66,154 +85,150 @@
 
     /* Mobile - 360px */
     @media only screen and (min-width: 0rem) {
-    #cs-footer-274 {
-        padding: var(--sectionPadding);
-    /* Navigation Links */
-}
-    #cs-footer-274 .cs-container {
-        width: 100%;
-        /* reset on tablet */
-        max-width: 34.375rem;
-    margin: auto;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    column-gap: 5.5rem;
-    row-gap: 2rem;
-}
-    #cs-footer-274 .cs-logo-group {
-        /* takes up all the space, lets the other ul's wrap below it */
-        width: 100%;
-        position: relative;
+        #cs-footer-274 {
+            padding: var(--sectionPadding);
+            /* Navigation Links */
+        }
+        #cs-footer-274 .cs-container {
+            width: 100%;
+            /* reset on tablet */
+            max-width: 34.375rem;
+            margin: auto;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            column-gap: 5.5rem;
+            row-gap: 2rem;
+        }
+        #cs-footer-274 .cs-logo-group {
+            /* takes up all the space, lets the other ul's wrap below it */
+            width: 100%;
+            position: relative;
+        }
+        #cs-footer-274 .cs-logo-group {
+            /* 44px - 52px */
+            margin-bottom: clamp(2.75rem, 6.8vw, 3.25rem);
+        }
+        #cs-footer-274 .cs-logo {
+            /* 210px - 240px */
+            width: clamp(13.125rem, 8vw, 15rem);
+            height: auto;
+            display: block;
+        }
+        #cs-footer-274 .cs-logo-img {
+            height: auto;
+        }
+        #cs-footer-274 .cs-social {
+            display: inline-flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            gap: 0.75rem;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+        #cs-footer-274 .cs-social-link {
+            width: 1.5rem;
+            height: 1.5rem;
+            background-color: #4e4b66;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            z-index: 1;
+            transition: transform 0.3s, background-color 0.3s;
+        }
+        #cs-footer-274 .cs-social-link:hover {
+            background-color: var(--primary);
+            transform: translateY(-0.1875rem);
+        }
+        #cs-footer-274 .cs-social-img {
+            height: 0.8125rem;
+            width: auto;
+            display: block;
+        }
+        #cs-footer-274 .cs-nav {
+            padding: 0;
+            margin: 0;
+        }
+        #cs-footer-274 .cs-nav-li {
+            list-style: none;
+            margin: 0;
+            color: var(--bodyTextColor);
+        }
+        #cs-footer-274 .cs-header {
+            font-size: 1rem;
+            line-height: 1.5em;
+            font-weight: 700;
+            /* 16px - 20px */
+            margin-bottom: clamp(1rem, 2.7vw, 1.25rem);
+            color: var(--bodyTextColor);
+            position: relative;
+            display: block;
+        }
+        #cs-footer-274 .cs-nav-link {
+            font-size: 1rem;
+            text-decoration: none;
+            line-height: 1.5em;
+            color: var(--bodyTextColor);
+            position: relative;
+        }
+        #cs-footer-274 .cs-nav-link:before {
+            /* underline */
+            content: '';
+            width: 0%;
+            height: 0.125rem;
+            background: var(--bodyTextColor);
+            opacity: 1;
+            position: absolute;
+            display: block;
+            bottom: -0.125rem;
+            left: 0;
+            transition: width 0.3s;
+        }
+        #cs-footer-274 .cs-nav-link:hover:before {
+            width: 100%;
+        }
     }
-    #cs-footer-274 .cs-logo-group {
-        /* 44px - 52px */
-        margin-bottom: clamp(2.75rem, 6.8vw, 3.25rem);
-}
-    #cs-footer-274 .cs-logo {
-        /* 210px - 240px */
-        width: clamp(13.125rem, 8vw, 15rem);
-    height: auto;
-    display: block;
-}
-    #cs-footer-274 .cs-logo-img {
-        height: auto;
-    }
-    #cs-footer-274 .cs-social {
-        display: inline-flex;
-        flex-direction: column;
-    justify-content: flex-start;
-    gap: 0.75rem;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-    #cs-footer-274 .cs-social-link {
-        width: 1.5rem;
-        height: 1.5rem;
-        background-color: #4e4b66;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 1;
-    transition:
-    transform 0.3s,
-    background-color 0.3s;
-}
-    #cs-footer-274 .cs-social-link:hover {
-        background-color: var(--primary);
-    transform: translateY(-0.1875rem);
-}
-    #cs-footer-274 .cs-social-img {
-        height: 0.8125rem;
-        width: auto;
-        display: block;
-    }
-    #cs-footer-274 .cs-nav {
-        padding: 0;
-        margin: 0;
-    }
-    #cs-footer-274 .cs-nav-li {
-        list-style: none;
-    margin: 0;
-    color: var(--bodyTextColor);
-}
-    #cs-footer-274 .cs-header {
-        font-size: 1rem;
-    line-height: 1.5em;
-    font-weight: 700;
-    /* 16px - 20px */
-    margin-bottom: clamp(1rem, 2.7vw, 1.25rem);
-    color: var(--bodyTextColor);
-    position: relative;
-    display: block;
-}
-    #cs-footer-274 .cs-nav-link {
-        font-size: 1rem;
-    text-decoration: none;
-    line-height: 1.5em;
-    color: var(--bodyTextColor);
-    position: relative;
-}
-    #cs-footer-274 .cs-nav-link:before {
-        /* underline */
-        content: "";
-        width: 0%;
-        height: 0.125rem;
-        background: var(--bodyTextColor);
-    opacity: 1;
-    position: absolute;
-    display: block;
-    bottom: -0.125rem;
-    left: 0;
-    transition: width 0.3s;
-}
-    #cs-footer-274 .cs-nav-link:hover:before {
-        width: 100%;
-    }
-}
     /* Tablet - 768px */
     @media only screen and (min-width: 48rem) {
-    #cs-footer-274 .cs-container {
-        max-width: 80rem;
-    row-gap: 0;
-    /* 44px - 88px */
-    column-gap: clamp(2.75rem, calc(6%), 5.5rem);
-}
-    #cs-footer-274 .cs-logo-group {
-        display: flex;
-        justify-content: space-between;
-    align-items: flex-start;
-}
-    #cs-footer-274 .cs-social {
-        flex-direction: row;
-    position: relative;
-    top: auto;
-    right: auto;
-}
-}
+        #cs-footer-274 .cs-container {
+            max-width: 80rem;
+            row-gap: 0;
+            /* 44px - 88px */
+            column-gap: clamp(2.75rem, calc(6%), 5.5rem);
+        }
+        #cs-footer-274 .cs-logo-group {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        #cs-footer-274 .cs-social {
+            flex-direction: row;
+            position: relative;
+            top: auto;
+            right: auto;
+        }
+    }
     /* Small Desktop - 1024px */
     @media only screen and (min-width: 64rem) {
-    #cs-footer-274 .cs-container {
-        justify-content: flex-end;
-}
-    #cs-footer-274 .cs-logo-group {
-        width: auto;
-        margin: 0;
-        /* pushes the rest of the content to the right in a flexbox */
-        margin-right: auto;
-    flex-direction: column;
-}
-    #cs-footer-274 .cs-logo-img {
-        margin-bottom: 2.75rem;
-}
-    #cs-footer-274 .cs-nav {
-        margin-top: 0.75rem;
-}
-}
-
-
+        #cs-footer-274 .cs-container {
+            justify-content: flex-end;
+        }
+        #cs-footer-274 .cs-logo-group {
+            width: auto;
+            margin: 0;
+            /* pushes the rest of the content to the right in a flexbox */
+            margin-right: auto;
+            flex-direction: column;
+        }
+        #cs-footer-274 .cs-logo-img {
+            margin-bottom: 2.75rem;
+        }
+        #cs-footer-274 .cs-nav {
+            margin-top: 0.75rem;
+        }
+    }
 </style>
