--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -22,7 +22,7 @@
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                     <li class="cs-li">
-                        <a href="" class="cs-li-link cs-active">
+                        <a href="#hero-1785" class="cs-li-link ">
                             Home
                         </a>
                     </li>
